@@ -64,6 +64,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         gold=2000
         team_name="1"
         shroud=yes
+        recall_cost=42
         [village]
             x,y=9,7
         [/village]
@@ -347,7 +348,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             >>
             [args]
                 side=1
-                gold=500
+                gold=-1900
             [/args]
         [/lua]
         [set_menu_item]
